<resources>
    <string name="app_name">Laws of Physics</string>
    <string name="topic">Electricity Laws</string>
    <string name="ohm_law">The Ohm\'s Law</string>
    <string name="ohm_law_description"><b>Ohm\'s law</b> states that the current through a conductor between two points is directly proportional to the voltage across the two points. Introducing the constant of proportionality, the resistance, one arrives at the usual mathematical equation that describes this relationship:\n
        \n<b>I = V/R</b>,
        \n\nwhere <b><i>I</i></b> is the current through the conductor in units of amperes, <b><i>V</i></b> is the voltage measured across the conductor in units of volts, and <b><i>R</i></b> is the resistance of the conductor in units of ohms. More specifically, Ohm\'s law states that the R in this relation is constant, independent of the current.
        \nThe law was named after the German physicist Georg Ohm, who, in a treatise published in 1827, described measurements of applied voltage and current through simple electrical circuits containing various lengths of wire. He presented a slightly more complex equation than the one above to explain his experimental results. The above equation is the modern form of Ohm\'s law.
        \n\nRead more: <a href="https://en.wikipedia.org/wiki/Ohm's_law">https://en.wikipedia.org/wiki/Ohm\'s_law</a>\n
    </string>

    <string name="voltage_divider">Voltage divider</string>
    <string name="voltage_divider_description"><b>Voltage divider</b> (also known as a potential divider) is a passive linear circuit that produces an output voltage (Vout) that is a fraction of its input voltage (Vin). Voltage division is the result of distributing the input voltage among the components of the divider. A simple example of a voltage divider is two resistors connected in series, with the input voltage applied across the resistor pair and the output voltage emerging from the connection between them.
       \n\nRead more: <a href="https://en.wikipedia.org/wiki/Voltage_divider">https://en.wikipedia.org/wiki/Voltage_divider</a>\n
    </string>

    <string name="current_divider">Current divider</string>
    <string name="current_divider_description"><b>Current divider</b> is a simple linear circuit that produces an output current (IX) that is a fraction of its input current (IT). Current division refers to the splitting of current between the branches of the divider. The currents in the various branches of such a circuit will always divide in such a way as to minimize the total energy expended.
         \n\nRead more: <a href="https://en.wikipedia.org/wiki/Current_divider">https://en.wikipedia.org/wiki/Current_divider</a>\n
    </string>

    <string name="resonant_circuit">Resonant circuit</string>
    <string name="resonant_circuit_description">An <b>LC circuit</b>, also called a <b>resonant circuit</b>, tank circuit, or tuned circuit, is an electric circuit consisting of an inductor, represented by the letter L, and a capacitor, represented by the letter C, connected together. The circuit can act as an electrical resonator, an electrical analogue of a tuning fork, storing energy oscillating at the circuit\'s resonant frequency.
        \nLC circuits are used either for generating signals at a particular frequency, or picking out a signal at a particular frequency from a more complex signal. They are key components in many electronic devices, particularly radio equipment, used in circuits such as oscillators, filters, tuners and frequency mixers.
       \n\nRead more: <a href="https://en.wikipedia.org/wiki/LC_circuit">https://en.wikipedia.org/wiki/LC_circuit</a>\n
    </string>

    <string name="electronic_color_code">Electronic color code</string>
    <string name="electronic_color_code_description">The electronic color code is used to indicate the values or ratings of electronic components, usually for resistors, but also for capacitors, inductors, and others. A separate code, the 25-pair color code, is used to identify wires in some telecommunications cables.
        \nThe electronic color code was developed in the early 1920s by the Radio Manufacturers Association (now part of Electronic Industries Alliance (EIA)), and was published as EIA-RS-279. The current international standard is IEC 60062. published by International Electrotechnical Commission.
        \n\nRead more: <a href="https://en.wikipedia.org/wiki/Electronic_color_code">https://en.wikipedia.org/wiki/Electronic_color_code</a>\n
    </string>
    <string name="animation_description">
        Animated diagram showing the operation of a tuned circuit (LC circuit). The capacitor C stores energy in its electric field E and the inductor L stores energy in its magnetic field B <i>(<span style="color:green;">green</span>)</i>. This jerky animation shows "snapshots" of the circuit at progressive points in the oscillation. The oscillations are slowed down; in an actual tuned circuit the charge oscillates back and forth tens of thousands to billions of times per second.
    </string>
    <string name="hintVoltage">Voltage</string>
    <string name="hintCurrent">Current</string>
    <string name="hintResistance">Resistance</string>
    <string name="divByZero">Division by zero!</string>


</resources>
